# supra-nodeops-data

./: manage_supra_nodes.sh  setup.sh  smr_settings.toml  smr_settings.toml.1  smr_settings_mainnet.toml
node_management/: install_management_scripts.sh  manage_supra_nodes.sh  migrate_config_and_db_mainnet_v7_to_v9.sh  migrate_config_mainnet_v7_to_v9_docker.sh  migrate_mainnet_from_v7_to_v9.sh  migrate_to_v8.0.2.sh  migrate_to_v9.0.x.sh  upload_snapshot.sh  utils.sh
node_management/config_migration/: lazydog.md
node_management/config_migration/tests/: config_v7.1.8.toml  (+5 more)
node_management/migration/: .gitignore  README.md  pyproject.toml
node_management/migration/common/: pyproject.toml
node_management/migration/common/src/common/: migration.py
node_management/migration/rpc/: README.md  config.toml  config_v7.1.8.toml  config_v9.0.7.toml  migrate-rpc-config-v7-to-v8.py  migrate_rpc_config_v7_to_v8.py  pyproject.toml  test_migration.py
node_management/migration/rpc/src/migrate_rpc_config/: cli.py  from_v7_to_v8.py  from_v8_to_v9.py  utils.py
node_management/migration/smr/: pyproject.toml  smr_settings.toml  smr_settings_v7.1.x.toml_v7.bak  smr_settings_v9.0.x.toml  test_migration.py
node_management/migration/smr/src/migrate_smr_settings/: cli.py  migrate_v7_to_v9.py
node_management/migration/src/cli/: main.py
node_management/migration/src/common/: globals.py  migration.py  utils.py
node_management/migration/src/rpc_config/: from_v7_to_v8.py  from_v7_to_v9.py  from_v8_to_v9.py  migrate_path.py  rpc_config_v9_1_x_mainnet_template.py  rpc_config_v9_1_x_mainnet_template.toml  v9_1_x_mainnet_template.py
node_management/migration/src/smr_settings/: from_v7_to_v9.py  migrate_path.py  smr_settings_v9_1_x_mainnet_template.py  smr_settings_v9_1_x_mainnet_template.toml
node_management/migration/templates/: rpc_config_v9.1.x_mainnet.toml  smr_settings_v9.1.x_mainnet.toml
node_management/migration/tests/: config_v7_to_v9_expected.toml  config_v8.0.2.toml  config_v9.1_mainnet.toml  config_v9_mainnet.toml  smr_settings_v7_to_v9_expected.toml  smr_settings_v9.1_mainnet.toml  smr_settings_v9_mainnet.toml  test_rpc_migration.py  test_smr_migration.py
release_round3_data/NodeOps_35.210.36.157/: smr_public_key.json
scripts/: onboarding_mainnet.sh  update_version_mainnet_7_1_8_rpc.sh
(+31 files in other folders)
