[project]
name = "migrate-config"
version = "0.1.0"
description = "Unified CLI tool to migrate Supra RPC and SMR configs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tomlkit>=0.13.2",
    "click>=8.0.0"
]

[project.scripts]
migrate-config = "cli.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find] 
where = ["src"]

[tool.setuptools.package-data]
rpc_config = ["rpc_config_v9_1_x_mainnet_template.toml"]
smr_settings = ["smr_settings_v9_1_x_mainnet_template.toml"]
