[project]
name = "migrate-rpc-config"
version = "0.1.0"
description = "A CLI tool to migrate Supra RPC config."
authors = [
    { name = "Kaiqi Chen" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tomlkit>=0.11.0"
]

[project.scripts]
migrate-rpc-config = "migrate_rpc_config.cli:main"
