[tool.poetry]
name = "migrate-smr-settings"
version = "0.1.0"
description = "A CLI tool to migrate Supra SMR settings."
authors = ["Kaiqi Chen"]

[tool.poetry.dependencies]
python = ">=3.10"
tomlkit = ">=0.13.2"
common = { path = "../common" }

[tool.poetry.scripts]
migrate-smr-settings = "migrate_smr_settings.cli:main"